--- a/scss/_advert.scss
+++ b/scss/_advert.scss
@@ -6,9 +6,14 @@ section#advert-section {
             padding:20px;   
         }
         .grid-x {
-            @include breakpoint (small down) {
+            max-width: 1200px;
+            margin-left:auto;
+            margin-right:auto;
+            @include breakpoint (medium down) {
                 flex-direction: column;
+                text-align:center;
                 .cell {
+                    width: auto;
                     margin-top:20px;
                     margin-bottom:20px;
                 }
